<resources>
    <string name="app_name">Soviet Poster Art</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">home</string>
    <string name="section_title">section title here</string>
    <string name="downloaded">download</string>
    <string name="favourite">favorite</string>
    <string name="settings">settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>
